--- a/Resources/Private/Partials/TranslationUnit.html
+++ b/Resources/Private/Partials/TranslationUnit.html
@@ -1,13 +1,4 @@
 <div class="row translationUnit {translationUnit.class}">
-	<f:if condition="{translationUnit.perfetto}">
-		<span class="label label-success">Translated</span>
-	</f:if>
-	<f:if condition="{translationUnit.originalModified}">
-		<span class="label label-warning">Modified</span>
-	</f:if>
-	<f:if condition="{translationUnit.nonTranslated}">
-		<span class="label label-important">NEW</span>
-	</f:if>
 	<div class="span4">
 		From:<br />
 		{translationUnit.source}
@@ -20,7 +11,7 @@
 		</f:if>
 	</div>
 	<div class="span7">
-		To:<br />
+		<b>To ({translationUnit.transUnitId}):</b><br />
 		<f:form.textfield name="translationUnits[{translationUnit.transUnitId}][{toLang}]" value="{translationUnit.target}" class="input-xxlarge" />
 	</div>
 </div>
